Fixed user and application blocking to working condition
