# internal/model/complaint.go
@@ -2,18 +2,13 @@ package model
 
 import "time"
 
-const (
-	Accepted = true
-	Rejected = false
-)
-
 type Complaint struct {
-	ID              int64     `db:"id" json:"id"`
+	ComplaintID     int64     `db:"complaint_id" json:"complaint_id"`
 	ReportingUserID int64     `db:"reporting_user_id" json:"reporting_user_id"`
 	ReportedUserID  int64     `db:"reported_user_id" json:"reported_user_id"`
 	Cause           string    `db:"cause" json:"cause"`
 	Time            time.Time `db:"time" json:"time"`
-	Response        string    `db:"response" json:"response"`
+	Response        *string   `db:"response" json:"response"`
 }
 type CreateComplaintInput struct {
 	ReportingUserID int64  `db:"reporting_user_id" json:"reporting_user_id"`
